--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,5 +1,7 @@
-cvxpy>=1.1.5
-pint>=0.15
-numpy>=1.19
-scipy>=1.5
-pandas>=1.1
+cvxpy~=1.1
+pint~=0.16
+numpy~=1.20
+scipy~=1.6
+pandas~=1.2
+Mosek~=9.2
+jupyterlab
