--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,8 @@ install_requires =
     numpy~=1.20
     scipy~=1.6
     cvxpy~=1.1
+    pint~=0.17
+    Mosek~=9.2.40
     sbtab~=1.0.0
 python_requires = >=3.7
 tests_require =
