moving all python related files to the `python` directory

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -48,10 +48,10 @@ tests_require =
     tox
 packages = find:
 package_dir =
-     = python
+     = src
 
 [options.packages.find]
-where = python
+where = src
 
 [options.extras_require]
 test =
@@ -81,7 +81,7 @@ model_balancing.data =
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = python/model_balancing/_version.py
+versionfile_source = src/model_balancing/_version.py
 versionfile_build = model_balancing/_version.py
 tag_prefix =
 parentdir_prefix = model-balancing-
