--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -43,6 +43,7 @@ install_requires =
     pint~=0.17
     Mosek~=9.2.40
     sbtab~=1.0.0
+    path~=15.1
 python_requires = >=3.7
 tests_require =
     tox
