--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
-autoapi~=2.0.1
 sphinxcontrib.bibtex~=2.1
 sphinxcontrib-napoleon~=0.7
+sphinx-autoapi~=1.7
 sphinx_rtd_theme~=0.5
 nbsphinx~=0.2
 ipykernel
